--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "email-validation": "^0.1.2",
+    "email-validator": "^2.0.4",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "firebase": "^9.15.0",
